--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,54 @@
-/* You can add global styles to this file, and also import other style files */
+.menu-inicio{
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+}
+
+.box{
+    width: 300px;
+    height: 200px;
+    border-radius: 5px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    cursor: pointer;
+    transition: 500ms all;
+}
+
+.box span{
+    font-size: 80px;
+}
+
+.box p {
+    color: white;
+    font-size: 26px;
+}
+
+.rojo{background-color: #d9534f;}
+.rojo:hover{background-color: #d14e49;}
+.rojo span {color: #c54b47;}
+
+.verde{background-color: #5cb85c;}
+.verde:hover{background-color: #53a853;}
+.verde span {color: #509e50;}
+
+.azul{background-color: #428bca;}
+.azul:hover{background-color: #3e81bd;}
+.azul span {color: #3a7ab3;}
+
+.titulo{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin-bottom: 20px;
+}
+
+.titulo span{
+    font-size: 20px;
+}
+
+.formulario{
+    background-color: #3a7bb373;
+    padding: 20px 20px 40px;
+}
