--- a/src/app/proveedores/editar-prov/editar-prov.component.html
+++ b/src/app/proveedores/editar-prov/editar-prov.component.html
@@ -1,55 +1,78 @@
+<div class="barra-fija">
+    <div title="Proveedores" routerLink="/Listado-proveedores">
+        <i class="far fa-address-book"></i>
+    </div>
+    <div title="Facturas" routerLink="/listado-facturas">
+      <i class="far fa-money-bill-alt"></i>
+    </div>
+  </div>
+
 <div class="col-md-12">
     <nav aria-label="breadcrumb">
       <ol class="breadcrumb">
         <li class="breadcrumb-item"><a routerLink="/inicio">Inicio</a></li>
         <li class="breadcrumb-item"><a routerLink="/compras">Compras</a></li>
-        <li class="breadcrumb-item"><a routerLink="/listado-proveedores">Listado de proveedores</a></li>
-        <li class="breadcrumb-item active" aria-current="page">Editar proveedor</li>
+        <li class="breadcrumb-item"><a routerLink="/Listado-proveedores">Proveedores</a></li>
+        <li class="breadcrumb-item active" aria-current="page" *ngIf="autenticacionService.getPermProveedor()">Editar proveedor</li>
+        <li class="breadcrumb-item active" aria-current="page" *ngIf="!autenticacionService.getPermProveedor()">Visualizar proveedor</li>
+        
       </ol>
     </nav>
   </div>
   <div class="col-md-12 titulo">
-    <span>Editar proveedor</span>
-    <button class="btn btn-primary" routerLink="/listado-proveedores">Volver</button>
+    <span *ngIf="autenticacionService.getPermProveedor()">Editar proveedor</span>
+    <span *ngIf="!autenticacionService.getPermProveedor()">Editar proveedor</span>    
+    <button class="btn btn-primary"
+    routerLink="/Listado-proveedores"><strong>Volver</strong></button>
   </div>
-  <div class="col-md-8 offset-md-2 col-12">
-    <div class="formulario">
-      <form [formGroup]="proveedorForm" (ngSubmit)="editarProv()">
-        <div class="form-group">
-          <input type="text" class="form-control" name="nombre" formControlName="nombre" placeholder="Nombre" [(ngModel)]="proveedor.nombre">
+      <div class="col-md-8 offset-md-2 col-12">
+        <div class="formulario">
+          <form [formGroup]="proveedorForm" (ngSubmit)="editarProv()">
+            <div class="form-group">
+              <input type="text" class="form-control" formControlName="nombre" placeholder="Nombre" [readonly]="!autenticacionService.getPermProveedor()" [(ngModel)]="proveedor.nombre">
+            </div>
+            <div class="form-group">
+              <input type="text" class="form-control" formControlName="cif" placeholder="CIF" [readonly]="!autenticacionService.getPermProveedor()" [(ngModel)]="proveedor.cif"> <!-- #cif Para que ponga el foco ahí-->
+            </div>
+            <div class="form-group">
+              <input type="text" class="form-control" formControlName="domicilio" placeholder="Dirección" [readonly]="!autenticacionService.getPermProveedor()" [(ngModel)]="proveedor.domicilio">
+            </div>
+            <div class="form-group">
+              <input type="text" class="form-control" formControlName="cp" placeholder="CP" [readonly]="!autenticacionService.getPermProveedor()" [(ngModel)]="proveedor.cp">
+            </div>
+            <div class="form-group">
+              <input type="text" class="form-control" formControlName="localidad" placeholder="Localidad" [readonly]="!autenticacionService.getPermProveedor()" [(ngModel)]="proveedor.localidad">
+            </div>
+            <div class="form-group">
+              <select class="form-control" formControlName="provincia" *ngIf="autenticacionService.getPermProveedor()" [(ngModel)]="proveedor.provincia">
+                <option *ngFor="let provincia of provincias" [ngValue]="provincia">
+                  {{provincia}}
+                </option>
+              </select>
+              <input type="text" class="form-control" formControlName="provincia" placeholder="Provincia" [readonly]="!autenticacionService.getPermProveedor()" [(ngModel)]="proveedor.provincia">              
+            </div>
+            <div class="form-group">
+              <input type="text" class="form-control" formControlName="telefono" placeholder="Telefono" [readonly]="!autenticacionService.getPermProveedor()" [(ngModel)]="proveedor.telefono">
+            </div>
+            <div class="form-group">
+              <input type="email" class="form-control" formControlName="email" placeholder="Email" [readonly]="!autenticacionService.getPermProveedor()" [(ngModel)]="proveedor.email">
+            </div>
+            <div class="form-group">
+              <input type="text" class="form-control" formControlName="contacto" placeholder="Contacto" [readonly]="!autenticacionService.getPermProveedor()" [(ngModel)]="proveedor.contacto">
+            </div>
+            <div *ngIf="autenticacionService.getPermProveedor()">
+                <button type="submit" class="btn btn-primary">
+                    <span> Guardar Cambios </span>
+                    <span *ngIf="enviando"><i class="fas fa-spinner fa-pulse"></i></span>
+                  </button>
+                  <button routerLink="/Listado-proveedores" 
+                          class="btn btn-danger">
+                    Cancelar
+                  </button>
+            </div>
+          </form>
+          <!-- <p class="alert alert-warning"
+                [@alerta]="estadoAlerta">{{mensaje}}</p> -->
         </div>
-        <div class="form-group">
-          <input type="text" class="form-control" formControlName="cif" placeholder="CIF" [(ngModel)]="proveedor.cif">
-        </div>
-        <div class="form-group">
-          <input type="text" class="form-control" formControlName="domicilio" placeholder="Domicilio" [(ngModel)]="proveedor.domicilio">
-        </div>
-        <div class="form-group">
-          <input type="text" class="form-control" formControlName="cp" placeholder="Código Postal" [(ngModel)]="proveedor.cp">
-        </div>
-        <div class="form-group">
-          <input type="text" class="form-control" formControlName="localidad" placeholder="Localidad" [(ngModel)]="proveedor.localidad">
-        </div>
-        <div class="form-group">
-          <select class="form-control" formControlName="provincia" [(ngModel)]="proveedor.provincia">
-            <option *ngFor="let provincia of provincias" [ngValue]="provincia">{{provincia}}</option>
-          </select>
-        </div>
-        <div class="form-group">
-          <input type="text" class="form-control" formControlName="telefono" placeholder="Teléfono" [(ngModel)]="proveedor.telefono">
-        </div>
-        <div class="form-group">
-          <input type="text" class="form-control" formControlName="mail" placeholder="E-mail" [(ngModel)]="proveedor.mail">
-        </div>
-        <div class="form-group">
-          <input type="text" class="form-control" formControlName="contacto" placeholder="Contacto" [(ngModel)]="proveedor.contacto">
-        </div>
-        <button type="submit" class="btn btn-primary">
-          <span >Guardar cambios en el proveedor</span> 
-          <!-- <span *ngIf="enviando"><i class="fas fa-spinner fa-pulse"></i></span> -->
-        </button>
-        <button routerLink="/listado-proveedores" class="btn btn-danger">Cancelar</button>
-      </form>
-      <!-- <p class="alert alert-warning" [@alerta]="estadoAlerta">{{mensaje}}</p> -->
-    </div>
-  </div>
+      </div>
+            
