--- a/src/app/inicio/inicio.component.html
+++ b/src/app/inicio/inicio.component.html
@@ -1,6 +1,11 @@
 <div *ngIf="!getLogged()" class="autenticacion">
-<h1 style="font-size:22; text-align:center;">Bienvenido a nuestra aplicación</h1>
-<h4 style="font-size:22; text-align:center;">Por favor <a ruoterLink="/inicio-sesion">Inicie sesión</a></h4>
+  <h1 style="font-size: 22px;
+             text-align: center;">
+             Bienvenido a nuestra aplicación</h1>
+  <h4 style="font-size: 16px;
+             text-align: center;">Por favor 
+    <a routerLink="/inicio-sesion">inicie sesión</a>
+  </h4>
 </div>
 <div *ngIf="getLogged()">
   <div class="container">
@@ -11,11 +16,12 @@
     </nav>
   </div>
   <div class="container menu-inicio">
-    <div class="box rojo" routerLink="/compras" *ngIf="autenticacionService.getPermCompras()">
+    <div class="box rojo" routerLink="/compras"
+         *ngIf="autenticacionService.getPermCompras()">
       <span><i class="fas fa-shopping-cart"></i></span>
       <p>Compras</p>
     </div>
-    <div class="box verde">
+    <div class="box verde" routerLink="/ventas">
       <span><i class="fas fa-hand-holding-usd"></i></span>
       <p>Ventas</p>
     </div>
@@ -23,10 +29,11 @@
       <span><i class="fas fa-briefcase"></i></span>
       <p>Contabilidad</p>
     </div>
-    <div class="box naranja" routerLink="/listado-usuarios" *ngIf="autenticacionService.getPermLisUsuarios()">
-      <span><i class="fas fa-user-secret"></i></span>
+    <div class="box naranja" 
+         routerLink="/listado-usuarios"
+         *ngIf="autenticacionService.getPermLisUsuarios()">
+      <span><i class="fas fa-users"></i></span>
       <p>Usuarios</p>
     </div>
-  </div>
-
+  </div> 
 </div>
