--- a/src/app/ventas/ventas.component.html
+++ b/src/app/ventas/ventas.component.html
@@ -1,12 +1,13 @@
 <div class="barra-fija">
-  <div title="Proveedores" routerLink="/Listado-proveedores">
-      <i class="far fa-address-book"></i>
+  <div title="Clientes" 
+       routerLink="/listado-clientes">
+      <i class="fas fa-address-book"></i>
   </div>
-  <div title="Facturas" routerLink="/listado-facturas">
-    <i class="far fa-money-bill-alt"></i>
+  <div title="Presupuestos" 
+        routerLink="/listado-presupuestos">
+      <i class="fas fa-money-bill-alt"></i>
   </div>
 </div>
-
 <div class="col-md-12">
   <nav aria-label="breadcrumb">
     <ol class="breadcrumb">
@@ -17,4 +18,4 @@
 </div>
 <div class="col-md-12 titulo">
     <span>Dashboard</span>
-  </div>
+</div>
