--- a/src/app/facturas/listado-fra/listado-fra.component.html
+++ b/src/app/facturas/listado-fra/listado-fra.component.html
@@ -25,7 +25,7 @@
   </button>
 </div>
 <div class="col-md-12">
-  <table class="table tabla-facturas">
+  <table class="table table-bordered table-striped tabla-facturas">
     <tr>
       <th>Proveedor</th>
       <th>CIF</th>
