--- a/src/app/cabecera/cabecera.component.html
+++ b/src/app/cabecera/cabecera.component.html
@@ -17,7 +17,7 @@
         </button>
         <button *ngIf="getLogged()"
                 class="btn btn-primary"
-                (click)=" cerrarSesion();autenticacionService.logout();">
+                (click)="crearSesion();autenticacionService.logout();">
           Cerrar sesión
         </button>
       </div>
