--- a/src/app/presupuestos/listado-pres/listado-pres.component.html
+++ b/src/app/presupuestos/listado-pres/listado-pres.component.html
@@ -7,6 +7,10 @@
         routerLink="/listado-presupuestos">
       <i class="fas fa-money-bill-alt"></i>
   </div>
+  <div title="Articulos" 
+        routerLink="/listado-articulos">
+    <i class="fas fa-archive"></i>
+  </div>
 </div>
 <div class="col-md-12">
   <nav aria-label="breadcrumb">
@@ -25,14 +29,16 @@
   </button>
 </div>
 <div class="col-md-12">
-  <table class="table tabla-facturas">
+  <table class="table table-bordered table-striped tabla-facturas">
     <tr>
+      <th style="width: 10%">Nº</th>
       <th>Cliente</th>
       <th>CIF</th>
       <th>Total</th>
       <th></th>
     </tr>
     <tr *ngFor="let presupuesto of presupuestos">
+      <td style="width: 10%">{{presupuesto.num}}</td>
       <td>{{presupuesto.cliente}}</td>
       <td>{{presupuesto.cif}}</td>
       <td>{{presupuesto.total}}</td>
